--- a/package.json
+++ b/package.json
@@ -1,1 +1,10 @@
-{}
+{
+  "dependencies": {
+    "async": "^3.2.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "fs": "*",
+    "mongodb": "^4.0.0",
+    "node-telegram-bot-api": "^0.53.0"
+  }
+}
